--- a/public/style.css
+++ b/public/style.css
@@ -14,3 +14,14 @@ html, body {
   font-size: 2em;
 }
 
+.form {
+  max-width: 80%;
+  margin-top: 5%;
+  margin-left:20%;
+  margin-right:20%;
+  padding-top: 2%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: white;
+}
